--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Vue.js App to GitHub Pages
 
 on:
   push:
-    branches: [ dev, main ]
+    branches: [ dev, main, gh-pages ]
   pull_request:
     branches: [ main ]
 
@@ -28,7 +28,7 @@ jobs:
       
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
-      if: github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/main'
+      if: github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/gh-pages'
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./dist
